fixed links in navbar to jump to correct section without unneccessary padding, fixed spacing of contact icons

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,20 +2,36 @@ html {
     scroll-behavior: smooth;
 }
 
+.custom-fixed-position {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+}
+
 body {
-    margin-top: 80px;
+    /* margin-top: 80px; */
 }
 
 header {
 }
 
 section {
-    padding-top: 80px;
+    /* padding-top: 80px; */
 }
 
 .main {
-    /* position: relative;
-    margin-top: 50px; */
+    /* margin-top: 50px; */
+}
+
+#anchor_1,
+#anchor_2,
+#anchor_3,
+#anchor_4 {
+  display: block;
+  position: relative;
+  top: -10vh;
+  visibility: hidden;
 }
 
 i {
@@ -31,8 +47,14 @@ h5 {
     text-align: center;
 }
 
+.card-text {
+    text-align: center;
+}
+
 .navbar {
 background-color: #029696 !important;
+height: 10vh;
+z-index: 10;
 }
 
 .navitem {
@@ -54,18 +76,12 @@ a {
 
 .jumbotron {
     background-color: #4dbcbc;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
+    /* padding-top: 10vh; */
+    margin-top: 10vh;
 }
 
 footer {
-    position: absolute;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
-    margin-top: 50px;
+    background-color: #4dbcbc;
   } 
 
 #work {
